gccida/g3/bitmap_equal_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1307:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1307:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1338:48: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)object_base = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v6, ( __m128i)( unsigned __int64)v20); 
                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1338:81: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)object_base = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v6, ( __m128i)( unsigned __int64)v20); 
                                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1356:48: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)object_base = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v19, ( __m128i)( unsigned __int64)v6); 
                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1356:82: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)object_base = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v19, ( __m128i)( unsigned __int64)v6); 
                                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1363:12: error: expected expression
*( _OWORD *)object_base = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/bitmap.c:1363:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)object_base = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_equal_p/src/obj/bitmap.o] Error 1
